// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GridCell /> > should flip back once mouse is moved away when hidden=false, displayToggleVisibility=false, showRelativeTime=false 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip back once mouse is moved away when hidden=false, displayToggleVisibility=false, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <span class="v-chip v-theme--light v-chip--density-default rounded-0 v-chip--size-small v-chip--variant-tonal" draggable="false">
    <!---->
    <span class="v-chip__underlay"></span>
    <!---->
    <div class="v-chip__prepend">
      <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
        <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
        </svg>
      </i>
      <!---->
    </div>
    <div class="v-chip__content" data-no-activator>2 years ago</div>
    <!---->
    <!---->
  </span>
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip back once mouse is moved away when hidden=false, displayToggleVisibility=true, showRelativeTime=false 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip back once mouse is moved away when hidden=false, displayToggleVisibility=true, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <span class="v-chip v-theme--light v-chip--density-default rounded-0 v-chip--size-small v-chip--variant-tonal" draggable="false">
    <!---->
    <span class="v-chip__underlay"></span>
    <!---->
    <div class="v-chip__prepend">
      <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
        <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
        </svg>
      </i>
      <!---->
    </div>
    <div class="v-chip__content" data-no-activator>2 years ago</div>
    <!---->
    <!---->
  </span>
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip back once mouse is moved away when hidden=true, displayToggleVisibility=false, showRelativeTime=false 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip back once mouse is moved away when hidden=true, displayToggleVisibility=false, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <span class="v-chip v-theme--light v-chip--density-default rounded-0 v-chip--size-small v-chip--variant-tonal" draggable="false">
    <!---->
    <span class="v-chip__underlay"></span>
    <!---->
    <div class="v-chip__prepend">
      <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
        <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
        </svg>
      </i>
      <!---->
    </div>
    <div class="v-chip__content" data-no-activator>2 years ago</div>
    <!---->
    <!---->
  </span>
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip back once mouse is moved away when hidden=true, displayToggleVisibility=true, showRelativeTime=false 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip back once mouse is moved away when hidden=true, displayToggleVisibility=true, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <span class="v-chip v-theme--light v-chip--density-default rounded-0 v-chip--size-small v-chip--variant-tonal" draggable="false">
    <!---->
    <span class="v-chip__underlay"></span>
    <!---->
    <div class="v-chip__prepend">
      <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
        <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
        </svg>
      </i>
      <!---->
    </div>
    <div class="v-chip__content" data-no-activator>2 years ago</div>
    <!---->
    <!---->
  </span>
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip on hover when hidden=false, displayToggleVisibility=false, showRelativeTime=false 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <header class="v-toolbar v-toolbar--density-default v-theme--light v-locale--is-ltr" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-toolbar">
      <!---->
      <div class="v-toolbar__content" style="height: 24px;">
        <!---->
        <!---->
        <!--v-if-->
        <div class="v-spacer"></div>
        <a aria-describedby="v-tooltip-0" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" href="https://github.com/webpack/webpack-cli/runs/7858502725" target="_blank">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </a>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <!---->
      </div>
      <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
        <!---->
      </transition-stub>
    </header>
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip on hover when hidden=false, displayToggleVisibility=false, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <header class="v-toolbar v-toolbar--density-default v-theme--light v-locale--is-ltr" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-toolbar">
      <!---->
      <div class="v-toolbar__content" style="height: 24px;">
        <!---->
        <!---->
        <span class="v-chip v-chip--pill v-theme--light v-chip--density-compact v-chip--size-small v-chip--variant-tonal" draggable="false">
          <!---->
          <span class="v-chip__underlay"></span>
          <!---->
          <div class="v-chip__prepend">
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
              </svg>
            </i>
            <!---->
          </div>
          <div class="v-chip__content" data-no-activator>2 years ago</div>
          <!---->
          <!---->
        </span>
        <div class="v-spacer"></div>
        <a aria-describedby="v-tooltip-2" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" href="https://github.com/webpack/webpack-cli/runs/7858502725" target="_blank">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </a>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <!---->
      </div>
      <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
        <!---->
      </transition-stub>
    </header>
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip on hover when hidden=false, displayToggleVisibility=true, showRelativeTime=false 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <header class="v-toolbar v-toolbar--density-default v-theme--light v-locale--is-ltr" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-toolbar">
      <!---->
      <div class="v-toolbar__content" style="height: 24px;">
        <!---->
        <!---->
        <!--v-if-->
        <div class="v-spacer"></div>
        <a aria-describedby="v-tooltip-0" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" href="https://github.com/webpack/webpack-cli/runs/7858502725" target="_blank">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </a>
        <!--teleport start-->
        <!--teleport end-->
        <button aria-describedby="v-tooltip-2" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-change-visibility-icon" type="button">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
        <!--teleport start-->
        <!--teleport end-->
        <!---->
      </div>
      <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
        <!---->
      </transition-stub>
    </header>
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip on hover when hidden=false, displayToggleVisibility=true, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <header class="v-toolbar v-toolbar--density-default v-theme--light v-locale--is-ltr" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-toolbar">
      <!---->
      <div class="v-toolbar__content" style="height: 24px;">
        <!---->
        <!---->
        <span class="v-chip v-chip--pill v-theme--light v-chip--density-compact v-chip--size-small v-chip--variant-tonal" draggable="false">
          <!---->
          <span class="v-chip__underlay"></span>
          <!---->
          <div class="v-chip__prepend">
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
              </svg>
            </i>
            <!---->
          </div>
          <div class="v-chip__content" data-no-activator>2 years ago</div>
          <!---->
          <!---->
        </span>
        <div class="v-spacer"></div>
        <a aria-describedby="v-tooltip-2" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" href="https://github.com/webpack/webpack-cli/runs/7858502725" target="_blank">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </a>
        <!--teleport start-->
        <!--teleport end-->
        <button aria-describedby="v-tooltip-4" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-change-visibility-icon" type="button">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
        <!--teleport start-->
        <!--teleport end-->
        <!---->
      </div>
      <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
        <!---->
      </transition-stub>
    </header>
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip on hover when hidden=true, displayToggleVisibility=false, showRelativeTime=false 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <header class="v-toolbar v-toolbar--density-default v-theme--light v-locale--is-ltr" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-toolbar">
      <!---->
      <div class="v-toolbar__content" style="height: 24px;">
        <!---->
        <!---->
        <!--v-if-->
        <div class="v-spacer"></div>
        <a aria-describedby="v-tooltip-0" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" href="https://github.com/webpack/webpack-cli/runs/7858502725" target="_blank">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </a>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <!---->
      </div>
      <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
        <!---->
      </transition-stub>
    </header>
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip on hover when hidden=true, displayToggleVisibility=false, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <header class="v-toolbar v-toolbar--density-default v-theme--light v-locale--is-ltr" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-toolbar">
      <!---->
      <div class="v-toolbar__content" style="height: 24px;">
        <!---->
        <!---->
        <span class="v-chip v-chip--pill v-theme--light v-chip--density-compact v-chip--size-small v-chip--variant-tonal" draggable="false">
          <!---->
          <span class="v-chip__underlay"></span>
          <!---->
          <div class="v-chip__prepend">
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
              </svg>
            </i>
            <!---->
          </div>
          <div class="v-chip__content" data-no-activator>2 years ago</div>
          <!---->
          <!---->
        </span>
        <div class="v-spacer"></div>
        <a aria-describedby="v-tooltip-2" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" href="https://github.com/webpack/webpack-cli/runs/7858502725" target="_blank">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </a>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <!---->
      </div>
      <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
        <!---->
      </transition-stub>
    </header>
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip on hover when hidden=true, displayToggleVisibility=true, showRelativeTime=false 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <header class="v-toolbar v-toolbar--density-default v-theme--light v-locale--is-ltr" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-toolbar">
      <!---->
      <div class="v-toolbar__content" style="height: 24px;">
        <!---->
        <!---->
        <!--v-if-->
        <div class="v-spacer"></div>
        <a aria-describedby="v-tooltip-0" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" href="https://github.com/webpack/webpack-cli/runs/7858502725" target="_blank">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </a>
        <!--teleport start-->
        <!--teleport end-->
        <button aria-describedby="v-tooltip-2" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-change-visibility-icon" type="button">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
        <!--teleport start-->
        <!--teleport end-->
        <!---->
      </div>
      <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
        <!---->
      </transition-stub>
    </header>
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should flip on hover when hidden=true, displayToggleVisibility=true, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <header class="v-toolbar v-toolbar--density-default v-theme--light v-locale--is-ltr" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-toolbar">
      <!---->
      <div class="v-toolbar__content" style="height: 24px;">
        <!---->
        <!---->
        <span class="v-chip v-chip--pill v-theme--light v-chip--density-compact v-chip--size-small v-chip--variant-tonal" draggable="false">
          <!---->
          <span class="v-chip__underlay"></span>
          <!---->
          <div class="v-chip__prepend">
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
              </svg>
            </i>
            <!---->
          </div>
          <div class="v-chip__content" data-no-activator>2 years ago</div>
          <!---->
          <!---->
        </span>
        <div class="v-spacer"></div>
        <a aria-describedby="v-tooltip-2" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" href="https://github.com/webpack/webpack-cli/runs/7858502725" target="_blank">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </a>
        <!--teleport start-->
        <!--teleport end-->
        <button aria-describedby="v-tooltip-4" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-small v-btn--variant-text" test-id="webpack-cli----webpack-cli----Lint-Commit-Messages-change-visibility-icon" type="button">
          <span class="v-btn__overlay"></span>
          <span class="v-btn__underlay"></span>
          <!---->
          <span class="v-btn__content" data-no-activator>
            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                <path d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z" />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
        <!--teleport start-->
        <!--teleport end-->
        <!---->
      </div>
      <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
        <!---->
      </transition-stub>
    </header>
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when build monitor view is disabled 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 120px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=false, status=FAILURE, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=false, status=SUCCESS, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell success" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=false, status=failure, hidden=false, displayToggleVisibility=true, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <span class="v-chip v-theme--light v-chip--density-default rounded-0 v-chip--size-small v-chip--variant-tonal" draggable="false">
    <!---->
    <span class="v-chip__underlay"></span>
    <!---->
    <div class="v-chip__prepend">
      <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
        <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
        </svg>
      </i>
      <!---->
    </div>
    <div class="v-chip__content" data-no-activator>2 years ago</div>
    <!---->
    <!---->
  </span>
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=false, status=failure, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <span class="v-chip v-theme--light v-chip--density-default rounded-0 v-chip--size-small v-chip--variant-tonal" draggable="false">
    <!---->
    <span class="v-chip__underlay"></span>
    <!---->
    <div class="v-chip__prepend">
      <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
        <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
        </svg>
      </i>
      <!---->
    </div>
    <div class="v-chip__content" data-no-activator>2 years ago</div>
    <!---->
    <!---->
  </span>
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=false, status=random, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=false, status=success, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell success" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <span class="v-chip v-theme--light v-chip--density-default rounded-0 v-chip--size-small v-chip--variant-tonal" draggable="false">
    <!---->
    <span class="v-chip__underlay"></span>
    <!---->
    <div class="v-chip__prepend">
      <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
        <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
        </svg>
      </i>
      <!---->
    </div>
    <div class="v-chip__content" data-no-activator>2 years ago</div>
    <!---->
    <!---->
  </span>
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=false, status=success, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell success" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=false, status=undefined, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=false, status=unknown, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell unknown" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=true, status=FAILURE, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 15px; --v-progress-linear-height: 15px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=true, status=SUCCESS, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell success" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 15px; --v-progress-linear-height: 15px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=true, status=failure, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=false 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 15px; --v-progress-linear-height: 15px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=true, status=failure, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <span class="v-chip v-theme--light v-chip--density-default rounded-0 v-chip--size-small v-chip--variant-tonal" draggable="false">
    <!---->
    <span class="v-chip__underlay"></span>
    <!---->
    <div class="v-chip__prepend">
      <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
        <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
        </svg>
      </i>
      <!---->
    </div>
    <div class="v-chip__content" data-no-activator>2 years ago</div>
    <!---->
    <!---->
  </span>
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 15px; --v-progress-linear-height: 15px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=true, status=random, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 15px; --v-progress-linear-height: 15px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=true, status=success, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=false 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell success" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 15px; --v-progress-linear-height: 15px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=true, status=success, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=true 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell success" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <span class="v-chip v-theme--light v-chip--density-default rounded-0 v-chip--size-small v-chip--variant-tonal" draggable="false">
    <!---->
    <span class="v-chip__underlay"></span>
    <!---->
    <div class="v-chip__prepend">
      <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start">
        <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <path d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z" />
        </svg>
      </i>
      <!---->
    </div>
    <div class="v-chip__content" data-no-activator>2 years ago</div>
    <!---->
    <!---->
  </span>
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 15px; --v-progress-linear-height: 15px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=true, status=success, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell success" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 15px; --v-progress-linear-height: 15px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=true, status=undefined, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 15px; --v-progress-linear-height: 15px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=true, status=unknown, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell unknown" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 15px; --v-progress-linear-height: 15px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render grid cell when inProgress=undefined, status=undefined, hidden=undefined, displayToggleVisibility=undefined, showRelativeTime=undefined 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 90px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <!--v-if-->
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;

exports[`<GridCell /> > should render in progress grid cell when build monitor view is disabled 1`] = `
<div class="v-card v-theme--light v-card--density-default rounded-6 v-card--variant-flat grid-cell failure" id="webpack-cli----webpack-cli----Lint-Commit-Messages" style="height: 120px;">
  <!---->
  <div class="v-card__loader">
    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-text grid-cell-name pa-2">webpack-cli :: webpack-cli :: Lint Commit Messages</div>
  <transition-stub appear="false" class="bg-transparent" css="true" name="expand-transition" persisted="false">
    <!--v-if-->
  </transition-stub>
  <!--v-if-->
  <div aria-hidden="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="v-progress-linear v-progress-linear--striped v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 10px; --v-progress-linear-height: 10px;">
    <!---->
    <div class="v-progress-linear__background bg-orange-darken-4"></div>
    <div class="v-progress-linear__buffer bg-orange-darken-4" style="width: 0%;"></div>
    <transition-stub appear="false" css="true" name="slide-x-transition" persisted="false">
      <div class="v-progress-linear__determinate bg-orange-darken-4" style="width: 100%;"></div>
    </transition-stub>
    <!---->
  </div>
  <!---->
  <!---->
  <span class="v-card__underlay"></span>
</div>
`;
